@@ -20,7 +20,7 @@ sub compute_p {
   my $conn    = $self->connection;
 
   # Data is stored as a serialized array-ref in Redis, so no need to check for defined
-  return $conn->write_p(GET => $key)->then(sub {
+  return (delete $self->{refresh} ? Mojo::Promise->new->resolve : $conn->write_p(GET => $key))->then(sub {
     return $_[0] ? $self->deserialize->($_[0])->[0] : $self->_compute_p($conn, $key, $expire, $compute);
   });
 }
@@ -32,11 +32,16 @@ sub memoize_p {
   my $key = join ':', $self->namespace, '@M' => (ref($obj) || $obj), $method, Mojo::JSON::encode_json($args);
   my $conn = $self->connection;
 
-  return $conn->write_p(GET => $key)->then(sub {
+  return (delete $self->{refresh} ? Mojo::Promise->new->resolve : $conn->write_p(GET => $key))->then(sub {
     return $_[0]
       ? $self->deserialize->($_[0])->[0]
       : $self->_compute_p($conn, $key, $expire, sub { $obj->$method(@$args) });
   });
+}
+
+sub refresh {
+  $_[0]->{refresh} = 1;
+  $_[0];
 }
 
 sub _compute_p {
@@ -169,6 +174,12 @@ called on an object or class. The key in the redis cache will become:
 
 C<$expire> is the number of seconds before the cache should expire, and will
 default to L</default_expire> unless passed in.
+
+=head2 refresh
+
+  $self = $self->refresh;
+
+Will force the next call to L</compute_p> or L</memoize_p> to be refreshed.
 
 =head1 SEE ALSO
 
